front-aio.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: semanticbus
    tier: frontend
spec:
  type: LoadBalancer
  loadBalancerIP: 146.148.24.26
  ports:
    # the port that this service should serve on
  - port: 80
  selector:
    app: semanticbus
    tier: frontend
