rabbit-stomp-simple.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-service-direct-simple
  namespace: kube-system
  labels:
    app: semanticbus
    tier: amqp-simple
spec:
  type: LoadBalancer
  ports:
    # the port that this service should serve on
  - port: 15672
  - port: 15674
  selector:
    app: semanticbus
    tier: amqp
