temprabbit.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-service-direct
  namespace: kube-system
  labels:
    app: semanticbus
    tier: amqp
spec:
  type: LoadBalancer
  ports:
    # the port that this service should serve on
  - port: 15672
  selector:
    app: semanticbus
    tier: amqp
