https-proxy.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: prod.semantic-bus.org
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
  tls:
  - secretName: letsencrypt-staging
    hosts: 
    - prod.semantic-bus.org
