traeffik-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: default
   annotations:
    kubernetes.io/ingress.class: gce
spec:
  selector:
    app: olfactory-shrimp-traefik
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    name: my-http-port
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
     paths:
     - backend:
         serviceName: traefik-web-ui
         servicePort: 80
