traefik-rabbit-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-traefik-service
  namespace: kube-system
spec:
  selector:
    app: semanticbus
    tier: amqp
  ports:
  - port: 80
    targetPort: 15672
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbit-traefik-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host : semantic-bus.org
    http:
      paths:
      - path : /amqp/
        backend:
          serviceName: rabbit-traefik-service
          servicePort: 80
