traefik-sembus-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-traefik-service
  namespace: kube-system
spec:
  selector:
    app: semanticbus
    tier: amqp
  ports:
  - port: 80
    targetPort: 15672
    name : management
  - port: 15674
    targetPort: 15674
    name : stomp
  - port: 5672
    targetPort: 5672
    name : amqp
---
apiVersion: v1
kind: Service
metadata:
  name: semanticbus-traefik-service
  namespace: kube-system
spec:
  selector:
    app: semanticbus
    tier: frontend
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: semanticbus-traefik-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
##    ingress.kubernetes.io/rewrite-target : /
##    ingress.kubernetes.io/add-base-url: "true"

spec:
  rules:
  - host : semantic-bus.org
    http:
      paths:
      - path : /
        backend:
          serviceName: semanticbus-traefik-service
          servicePort: 8080
      - path : /rabbit
        backend:
          serviceName: rabbit-traefik-service
          servicePort: 80
      - path : /stomp
        backend:
          serviceName: rabbit-traefik-service
          servicePort: 15674
      - path : /amqp
        backend:
          serviceName: rabbit-traefik-service
          servicePort: 5672
